--- a/index.html
+++ b/index.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="name" content="Tic-Tac-Toe">
-    <meta name="description" content="A multiplayer game where you put Xs and Os to get them in a row and win">
-    <meta name="keywords" content="game, tic-tac-toe">
-    <meta name="author" content="TBA"> <!-- TBA -->
-    <title>Tic-Tac-Toe</title>
-  </head>
-  <body>
-    <h1>Tic Tac Toe</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="name" content="Tic-Tac-Toe">
+  <meta name="description" content="A multiplayer game where you put Xs and Os to get them in a row and win">
+  <meta name="keywords" content="game, tic-tac-toe">
+  <meta name="author" content="TBA"> <!-- TBA -->
+  <title>Tic-Tac-Toe</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/a074c2fac0.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <h1 id="heading-title">Tic Tac Toe</h1>
+
+  <div class="container">
+    <div class="row-container">
+
+
+      <div class="row">
+
+        <div id="cell1" type="button" class="cell">
+
+          <img src="images/circle1.png" alt="circle">
+
+        </div>
+        <div id="cell2" type="button" class="cell">
+
+          <img src="images/cross.png" alt="cross">
+
+        </div>
+        <div id="cell3" type="button" class="cell">
+
+        </div>
+
+      </div>
+      <div class="row">
+
+        <div id="cell4" type="button" class="cell">
+
+        </div>
+        <div id="cell5" type="button" class="cell">
+
+        </div>
+        <div id="cell6" type="button" class="cell">
+
+        </div>
+
+      </div>
+      <div class="row">
+
+        <div id="cell7" type="button" class="cell">
+
+        </div>
+        <div id="cell8" type="button" class="cell">
+
+        </div>
+        <div id="cell9" type="button" class="cell">
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/game.js" charset="utf-8"></script>
+</body>
+
 </html>
