adding classes to the checked boxes to later implement anti-collision

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
       <div class="row">
 
-        <div id="cell1" type="button" class="cell">
+        <div id="cell1" type="button" class="cell checked">
 
           <img src="images/circle1.png" alt="circle">
 
         </div>
-        <div id="cell2" type="button" class="cell">
+        <div id="cell2" type="button" class="cell checked">
 
           <img src="images/cross.png" alt="cross">
 
