Implementing stopping user from selecting the same box multiple times

--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
 
       <div class="row">
 
-        <div id="cell1" type="button" class="cell checked">
-
+        <div id="cell1" type="button" class="cell">
+<!--
           <img src="images/circle1.png" alt="circle">
+          JS working, dont need this anymore -->
 
         </div>
-        <div id="cell2" type="button" class="cell checked">
-
+        <div id="cell2" type="button" class="cell">
+<!--
           <img src="images/cross.png" alt="cross">
+          JS working, dont need this anymore -->
 
         </div>
         <div id="cell3" type="button" class="cell">
