--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     </div>
   </div>
 
+  <div class="tempBtn">
+    <button id="reset">Reset Game</button>
+  </div>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/game.js" charset="utf-8"></script>
 </body>
